tests/invalid/function_empty_list_default_non_list_annotation/main.py
def f(x: int = []) -> int:
    return x


def run_case() -> None:
    print(f())


if __name__ == "__main__":
    run_case()
